# open_jtalk

src/: CMakeLists.txt
src/jpcommon/: CMakeLists.txt
src/mecab/: CMakeLists.txt  config.h.in
src/mecab-naist-jdic/: .gitignore  CMakeLists.txt
src/mecab2njd/: CMakeLists.txt
src/njd/: CMakeLists.txt
src/njd2jpcommon/: CMakeLists.txt
src/njd_set_accent_phrase/: CMakeLists.txt
src/njd_set_accent_type/: CMakeLists.txt
src/njd_set_digit/: CMakeLists.txt
src/njd_set_long_vowel/: CMakeLists.txt
src/njd_set_pronunciation/: CMakeLists.txt
src/njd_set_unvoiced_vowel/: CMakeLists.txt
src/text2mecab/: CMakeLists.txt
